[gd_scene load_steps=39 format=2]

[ext_resource path="res://LaserBeam.gd" type="Script" id=2]
[ext_resource path="res://sfx/laser_idle_sfx.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/laser_attack_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://laser_base.png" type="Texture" id=5]
[ext_resource path="res://laser.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.00462, 10.9612 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 0, 1020, 40, 30 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 0, 30, 40, 30 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 0, 60, 40, 30 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 0, 90, 40, 30 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 0, 120, 40, 30 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 0, 150, 40, 30 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 180, 40, 30 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 0, 210, 40, 30 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 0, 240, 40, 30 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 0, 270, 40, 30 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 300, 40, 30 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 0, 330, 40, 30 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 360, 40, 30 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 0, 390, 40, 30 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 0, 420, 40, 30 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 0, 450, 40, 30 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 480, 40, 30 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 0, 510, 40, 30 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 0, 540, 40, 30 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 0, 570, 40, 30 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 0, 600, 40, 30 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 0, 630, 40, 30 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 0, 660, 40, 30 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 0, 690, 40, 30 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 0, 720, 40, 30 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 0, 750, 40, 30 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 0, 840, 40, 30 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 0, 870, 40, 30 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 0, 930, 40, 30 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 0, 960, 40, 30 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": false,
"name": "Idle",
"speed": 30.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ), SubResource( 39 ) ],
"loop": false,
"name": "Attacking",
"speed": 20.0
} ]

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.7726, -10.0908 )
scale = Vector2( 6.35, 23.3038 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10.63, -10.4953 )
rotation = -1.5708
scale = Vector2( 10, 2 )
frames = SubResource( 35 )
animation = "Attacking"
frame = 22
playing = true
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserAttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
max_distance = 900.0
bus = "Sfx"

[node name="LaserIdleAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
max_distance = 900.0
bus = "Sfx"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 11.7462, -9.32457 )
scale = Vector2( 5, 7.09409 )
texture = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
